Creacion de Tabla Repositorio y DTO comienzo de metodo save

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+# --- DATASOURCE
+#Indica donde se encuentra nuestra base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/ong
+#Usuario y contraseña
+spring.datasource.username=root
+spring.datasource.password=root
+
+# --- HIBERNATE
+#Indicamos que nuestra base impacte en la BD
+spring.jpa.hibernate.ddl-auto=update
+
+# --- SQL
+#Muestra los SQL por consola
+spring.jpa.show-sql=true
+#Para que aparezcan formateados los sql (cambiarlo a "true" cuando querramos verlas formateadas)
+spring.jpa.properties.hibernate.format-sql=false
+
+spring.security.user.name=root
+spring.security.user.password=root
+
+
+
 
