--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# GENERAL
+server.port=8080
+# DATABASE
+spring.datasource.url=jdbc:mysql://localhost:3306/somos_mas_db
+spring.datasource.username=root
+spring.datasource.password=Agusromero1
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=false
+spring.main.allow-circular-references: true
 
