--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,16 @@
-# --- DATASOURCE
-#Indica donde se encuentra nuestra base de datos
-spring.datasource.url=jdbc:mysql://localhost:3306/ong
-#Usuario y contraseña
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:h2:mem:ong;DB_CLOSE_DELAY=-1
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=root
-
-# --- HIBERNATE
-#Indicamos que nuestra base impacte en la BD
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
 
-# --- SQL
-#Muestra los SQL por consola
-spring.jpa.show-sql=true
-#Para que aparezcan formateados los sql (cambiarlo a "true" cuando querramos verlas formateadas)
-spring.jpa.properties.hibernate.format-sql=false
 
-spring.security.user.name=root
-spring.security.user.password=root
+spring.jpa.open-in-view=false
+
 
 
 
