Changes to SpringSecurityConfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
+spring.security.user.name=root
+spring.security.user.password=root
