--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,17 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
+
+
+s3.endpointUrl=https://s3.us-east-1.amazonaws.com
+s3.accessKey=AKIA3QCME3YXOJNH27DK
+s3.secretKey=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
+s3.bucketName=oti193-java
+s3.region=us-east-1
+
+amazonProperties.endpointUrl=${s3.endpointUrl}
+amazonProperties.accessKey=${s3.accessKey}
+amazonProperties.secretKey=${s3.secretKey}
+amazonProperties.bucketName=${s3.bucketName}
+amazonProperties.region=${s3.region}
+
