--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,6 @@ spring.jpa.generate-ddl=true
 
 spring.datasource.initialization-mode=never 
 
+#spring.sql.init.schema-locations=classpath:create_account_table.sql
 spring.security.user.name=root
 spring.security.user.password=root
