--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.url=jdbc:h2:mem:ongApplication
+spring.datasource.url=jdbc:h2:mem:ongApplication;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
+spring.jpa.defer-datasource-initialization=true
 
-spring.datasource.initialization-mode=never 
+spring.datasource.initialization-mode=always
 
 #spring.sql.init.schema-locations=classpath:create_account_table.sql
 s3.endpointUrl=https://s3.us-east-1.amazonaws.com
