Properties of sendgrid added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,5 @@ amazonProperties.bucketName=${s3.bucketName}
 amazonProperties.region=${s3.region}
 spring.security.user.name=root
 spring.security.user.password=root
+alkemy.somosmas.email.sender=jaal.ot193@gmail.com
+alkemy.somosmas.email.enabled=true
