--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
 			<artifactId>junit-jupiter</artifactId>
 			<version>5.8.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
