--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,7 @@ amazonProperties.bucketName=${s3.bucketName}
 amazonProperties.region=${s3.region}
 spring.security.user.name=root
 spring.security.user.password=root
+
+#path swagger
+springdoc.api-docs.path=/api/docs
+springdoc.swagger-ui.path=/api/ui
